<resources>
    <!-- Ad Unit ID -->
    <string name="banner_ad_unit_id">ca-app-pub-8265447561352564/2863428730</string>

    <string name="app_name">Master Synthetizer</string>
    <string name="action_settings">Paramètres</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_email">roiheenok@gmail.com</string>
    <string name="nav_plus_group">Plus</string>
    <string name="nav_heenok_menu">Synthétiseur bordélique</string>
    <string name="nav_skill_menu">Synthétiseur de skill</string>
    <string name="about">A propos</string>
    <string name="donate">Dons</string>

    <!-- Main -->
    <string name="main_title">TEST</string>
    <string name="coming_soon">Coming soon</string>

    <!-- Synthétiseur du Roi Heenok -->
    <string name="heenok_title">Yoh les PD\'s !</string>
    <string name="heenok_chevilles">Chevilles</string>
    <string name="heenok_brla">Brla</string>
    <string name="heenok_medaillon">Médaillon</string>
    <string name="heenok_montres">Montres</string>
    <string name="heenok_negros">Négros</string>
    <string name="heenok_houhou">Houhou</string>
    <string name="heenok_revenu">Aucun revenu</string>
    <string name="heenok_han">Han !</string>
    <string name="heenok_croivent">Ils croivent</string>
    <string name="heenok_pesent">Pesent rien</string>
    <string name="heenok_dimension">Autre dimension</string>
    <string name="heenok_100dollars">100 dollars</string>
    <string name="heenok_montrealparis">Montreal Paris</string>
    <string name="heenok_hydroponique">Hydroponique</string>
    <string name="heenok_pomme">Pomme</string>
    <string name="heenok_revent">Rêvent a cela</string>
    <string name="heenok_convention">Convention</string>
    <string name="heenok_equipe">Mon equipe</string>
    <string name="heenok_famille">pas d\'la famille</string>
    <string name="text_home">On va s\'allumer</string>
    <string name="heenok_calotte">Calotte</string>
    <string name="heenok_tentends1">T\'entends</string>
    <string name="heenok_ptipd">Pti PD</string>
    <string name="heenok_calotte2">On calotte</string>
    <string name="heenok_streetlife">Street Life</string>
    <string name="heenok_donnedelamour">Donne de l\'amour</string>
    <string name="heenok_cestpete">C\'est pété</string>
    <string name="heenok_autredimension">Autre dimension</string>
    <string name="heenok_frousse">La frousse</string>
    <string name="heenok_sorbonne">Sorbonne</string>
    <string name="heenok_balafre">Balafré</string>
    <string name="heenok_dictionnaire">Dictionnaire</string>
    <string name="heenok_chosessepassent">Choses se passent</string>
    <string name="heenok_tyson">Michael Tyson</string>
    <string name="heenok_rapclassic">Rap classic</string>

    <!-- About -->
    <string name="developper">Développeur</string>
    <string name="template">Template Heenok</string>
    <string name="sebastien_benazet">Sébastien Bénazet</string>
    <string name="antoine_decriem">Antoine Decriem</string>

    <!-- Textes d'accessibilité -->
    <string name="accessibility_home_image">Image du Roi Heenok fumant</string>
    <string name="accessibility_ic_launcher">Tête du Roi Heenok</string>
    <string name="jukebox">Jukebox</string>


</resources>
