<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_heenok"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/nav_heenok_menu" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_skill_menu" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/coming_soon" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/coming_soon" />
    </group>

    <item android:title="@string/nav_plus_group">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:title="@string/about" />
            <item
                android:id="@+id/nav_donate"
                android:icon="@drawable/ic_menu_donate"
                android:title="@string/donate" />
        </menu>
    </item>

</menu>
