<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/developperLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/developper"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/developper_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/developperLabel"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:text="@string/sebastien_benazet"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/template_tabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/developper_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:text="@string/template"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/template_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/template_tabel"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="20dp"
        android:text="@string/antoine_decriem"
        android:textSize="22sp" />

</RelativeLayout>